--- a/03-chatBot/chat.ipynb
+++ b/03-chatBot/chat.ipynb
@@ -5,8 +5,9 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-08-27T10:08:33.965166Z",
+     "start_time": "2024-08-27T10:08:33.574052Z"
     }
    },
    "source": [
@@ -14,13 +15,26 @@
     "from utils import LLMModels\n",
     "from langchain_core.prompts import ChatPromptTemplate\n"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dotenv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mlib2to3\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mfixes\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mfix_input\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m context\n\u001B[0;32m----> 2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mutils\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m LLMModels\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mlangchain_core\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mprompts\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m ChatPromptTemplate\n",
+      "File \u001B[0;32m~/Documents/repos/LLMSTUFF/03-chatBot/utils.py:2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mdotenv\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m load_dotenv\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mlangchain_openai\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mchat_models\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m ChatOpenAI\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mlangchain_openai\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01membeddings\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m OpenAIEmbeddings\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'dotenv'"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-26T18:17:52.713560Z",
+     "end_time": "2024-08-27T10:08:33.982684141Z",
      "start_time": "2024-08-26T18:17:52.708990Z"
     }
    },
@@ -57,7 +71,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-26T18:09:33.664274Z",
+     "end_time": "2024-08-27T10:08:33.985976748Z",
      "start_time": "2024-08-26T18:09:33.650905Z"
     }
    },
